--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ python-dib-utils (0.0.6-2) UNRELEASED; urgency=medium
   * Fixed upstream GIT url.
   * Fixed VCS URLs (https).
   * d/rules: Changed UPSTREAM_GIT protocol to https
+  * d/copyright: Changed source URL to https protocol
 
  -- Ondřej Nový <novy@ondrej.org>  Mon, 08 Feb 2016 19:57:27 +0100
 
