--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ python-dib-utils (0.0.6-2) UNRELEASED; urgency=medium
   * Fixed VCS URLs (https).
   * d/rules: Changed UPSTREAM_GIT protocol to https
   * d/copyright: Changed source URL to https protocol
+  * d/s/options: extend-diff-ignore of .gitreview
+  * d/control: Using OpenStack's Gerrit as VCS URLs.
 
  -- Ondřej Nový <novy@ondrej.org>  Mon, 08 Feb 2016 19:57:27 +0100
 
