--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ python-dib-utils (0.0.6-2) UNRELEASED; urgency=medium
   * d/copyright: Changed source URL to https protocol
   * d/s/options: extend-diff-ignore of .gitreview
   * d/control: Using OpenStack's Gerrit as VCS URLs.
+  * Bumped debhelper compat version to 10
 
  -- Ondřej Nový <novy@ondrej.org>  Mon, 08 Feb 2016 19:57:27 +0100
 
